# ipatool-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  util.rs
src/appstore/: bag.rs  download.rs  login.rs  mod.rs  purchase.rs  search.rs  types.rs  version_metadata.rs  versions.rs
src/http/: client.rs
src/storage/: cookies.rs  keyring.rs  mod.rs
