[package]
name = "ipatool"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

reqwest = { version = "0.13.2", features = ["json", "stream", "cookies", "rustls", "query", "form"] }
reqwest_cookie_store = "0.10.0"
cookie_store = { version = "0.22.1", features = ["serde"] }

keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

plist = "1"
regex = "1"
url = "2"

zip = { version = "2", default-features = false, features = ["deflate"] }
bytes = "1"
futures-util = "0.3"

clap = { version = "4.5", features = ["derive"] }
dirs = "5"
mac_address = "1.1.8"
indicatif = "0.18.4"
log = "0.4.29"
env_logger = "0.11.10"
owo-colors = "4.3.0"
