[package]
name = "ipatool"
version = "0.1.0"
edition = "2024"
description = "Download IPAs directly from Apple, a pure Rust port of ipatool."
license = "MIT"
repository = "https://github.com/uncor3/ipatool-rs"
keywords = ["ipatool", "ios", "apple", "ipa", "downloader", ]
authors = ["uncor3 <github.com/uncor3>"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

reqwest = { version = "0.13.2", features = ["json", "stream", "cookies", "rustls", "query", "form"] }
reqwest_cookie_store = "0.10.0"
cookie_store = { version = "0.22.1", features = ["serde"] }

keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

plist = "1"
regex = "1"
url = "2"

zip = { version = "2", default-features = false, features = ["deflate"] }
bytes = "1"
futures-util = "0.3"

clap = { version = "4.5", features = ["derive"] , optional = true }
dirs = "5"
mac_address = "1.1.8"
indicatif = {version = "0.18.4" , optional = true }
log = "0.4.29"
env_logger = "0.11.10"
owo-colors = {version = "4.3.0" , optional = true }


[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif" , "dep:owo-colors"]

[[bin]]
name = "ipatool-rs"
path = "src/bin/ipatool-rs.rs"
required-features = ["cli"]

